Start creating timeline in schedule section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="information-box" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="100"
                         tabindex="0">
                         <div class="box-content">
-                            <h3 class="date">27.06 - 05.07 <br> <small>(9&nbsp;dni)</small> <br>  2026</h3>
+                            <h3 class="date">27.06 - 05.07 <br> <small>(9&nbsp;dni)</small> <br> 2026</h3>
                         </div>
                     </div>
                     <div class="information-box" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="300"
@@ -126,6 +126,31 @@
             <h2 class="section-title">Program Pielgrzymki</h2>
             <div class="underline"></div>
             <div class="container">
+
+                <div class="timeline-container">
+                    <div class="timeline">
+                        <div class="timeline-item item1">
+                            <ul>
+                                <li>Zbiórka o godz. 5.00, a następnie Msza św. – kościół parafialny w Czchowie</li>
+                                <li>Pakowanie do autokaru. Przejazd przez Słowację, Węgry</li>
+                                <li>Nocleg w Ludbergu. Odpoczynek</li>
+                            </ul>
+                            <div class="arrow"></div>
+                        </div>
+                        <div class="timeline-item item2">
+                            <ul>
+                                <li>Śniadanie w hotelu</li>
+                                <li>Przyjazd do Medjugorje w godzinach popołudniowych - zakwaterowanie i odpoczynek</li>
+                                <li>Obiadokolacja – zapoznanie się z Parafią i uczestnictwo w nabożeństwie wieczornym -
+                                    nocleg
+                                </li>
+                            </ul>
+                            <div class="arrow"></div>
+                        </div>
+                        <!-- <div class="timeline-item item3"></div> -->
+                    </div>
+                </div>
+
                 <div class="row text-center justify-content-center schedule-container">
                     <div class="col-md-6 col-xl-6" tabindex="0">
                         <div data-aos="zoom-in" data-aos-duration="600">
@@ -194,7 +219,7 @@
                 </div>
             </div>
         </section>
-        
+
         <section id="contact" class="contact py-5">
             <div style="margin-top: 80px;"></div>
 
