Create timeline section

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <img src="/img/wave.svg" alt="Wave">
         </section>
 
-        <section id="schedule" class="schedule py-5">
+        <section id="timeline" class="schedule py-5">
             <h2 class="section-title">Program Pielgrzymki</h2>
             <div class="underline"></div>
             <div class="container">
@@ -147,73 +147,32 @@
                             </ul>
                             <div class="arrow"></div>
                         </div>
-                        <!-- <div class="timeline-item item3"></div> -->
-                    </div>
-                </div>
-
-                <div class="row text-center justify-content-center schedule-container">
-                    <div class="col-md-6 col-xl-6" tabindex="0">
-                        <div data-aos="zoom-in" data-aos-duration="600">
-                            <div class="schedule-box">
-                                <p class="schedule-box-title">Dzień 1</p>
-                                <hr>
-                                <p>Zbiórka o godz. 5.00, a następnie Msza św. – kościół parafialny w Czchowie</p>
-                                <p><span>*</span></p>
-                                <p>Pakowanie do autokaru. Przejazd przez Słowację, Węgry</p>
-                                <p><span>*</span></p>
-                                <p>Nocleg w Ludbergu. Odpoczynek</p>
-                            </div>
+                        <div class="timeline-item item3">
+                            <ul>
+                                <li>
+                                    Codzienne wieczorne nabożeństwo międzynarodowe: Różaniec, Msza święta, modlitwa o
+                                    uzdrowienie duszy i ciała
+                                </li>
+                                <li>Po Mszy Świętej Adoracja Najświętszego Sakramentu (wtorek i czwartek)</li>
+                                <li>Wspólna Droga Krzyżowa na górę Kriźevac oraz Różaniec na Górę Objawień</li>
+                                <li>
+                                    Wyjazd do miejscowości Gradać – plażowanie i wypoczynek nad Morzem Adriatyckim w
+                                    Chorwacji (co najmniej dwa dni)
+                                </li>
+                                <li>W miarę możliwości spotkania z Wizjonerami i Ojcami Franciszkanami</li>
+                                <li>Mostar – zwiedzanie zabytkowego Starego Miasta</li>
+                                <li>Wizyta we wspólnocie Cenacolo</li>
+                                <li>Opcjonalnie wyjazd do Dubrownika (dopłata 150zl)</li>
+                            </ul>
+                            <div class="arrow"></div>
                         </div>
-                    </div>
-
-                    <div class="col-md-6 col-xl-6" tabindex="0">
-                        <div data-aos="zoom-in" data-aos-duration="600" data-aos-delay="200">
-                            <div class="schedule-box">
-                                <p class="schedule-box-title">Dzień 2</p>
-                                <hr>
-                                <p>Śniadanie w hotelu</p>
-                                <p><span>*</span></p>
-                                <p>Przyjazd do Medjugorje w godzinach popołudniowych - zakwaterowanie i odpoczynek</p>
-                                <p><span>*</span></p>
-                                <p>Obiadokolacja – zapoznanie się z Parafią i uczestnictwo w nabożeństwie wieczornym -
-                                    nocleg</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div data-aos="zoom-in" data-aos-duration="600" tabindex="0">
-                        <div class="schedule-box">
-                            <p class="schedule-box-title">Dzień 3 - 8</p>
-                            <hr>
-                            <p>Codzienne wieczorne nabożeństwo międzynarodowe: Różaniec, Msza święta, modlitwa o
-                                uzdrowienie duszy i ciała</p>
-                            <p><span>*</span></p>
-                            <p>Po Mszy Świętej Adoracja Najświętszego Sakramentu (wtorek i czwartek)</p>
-                            <p><span>*</span></p>
-                            <p>Wspólna Droga Krzyżowa na górę Kriźevac oraz Różaniec na Górę Objawień</p>
-                            <p><span>*</span></p>
-                            <p>Wyjazd do miejscowości Gradać – plażowanie i wypoczynek nad Morzem Adriatyckim w
-                                Chorwacji (co najmniej dwa dni)</p>
-                            <p><span>*</span></p>
-                            <p>W miarę możliwości spotkania z Wizjonerami i Ojcami Franciszkanami</p>
-                            <p><span>*</span></p>
-                            <p>Mostar – zwiedzanie zabytkowego Starego Miasta</p>
-                            <p><span>*</span></p>
-                            <p>Wizyta we wspólnocie Cenacolo</p>
-                            <p><span>*</span></p>
-                            <p>Opcjonalnie wyjazd do Dubrownika (dopłata 150zl)</p>
-                        </div>
-                    </div>
-
-                    <div data-aos="zoom-in" data-aos-duration="600" tabindex="0">
-                        <div class="schedule-box">
-                            <p class="schedule-box-title">Dzień 9</p>
-                            <hr>
-                            <p>Śniadanie</p>
-                            <p><span>*</span></p>
-                            <p>Pakowanie bagaży - wyjazd z Medjugorje</p>
-                            <p><span>*</span></p>
-                            <p>Przyjazd do Polski po północy</p>
+                        <div class="timeline-item item4">
+                            <ul>
+                                <li>Śniadanie</li>
+                                <li>Pakowanie bagaży - wyjazd z Medjugorje</li>
+                                <li>Przyjazd do Polski po północy</li>
+                            </ul>
+                            <div class="arrow"></div>
                         </div>
                     </div>
                 </div>
